; ModuleID = '/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson03/1/xdfm1/src/extr_arm_timer.c_armtimer_init.c'
source_filename = "/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson03/1/xdfm1/src/extr_arm_timer.c_armtimer_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ARMTIMER_LOAD = common dso_local global i32 0, align 4
@interval = common dso_local global i32 0, align 4
@ARMTIMER_CTRL = common dso_local global i32 0, align 4
@ARMTIMER_CTRL_23BIT = common dso_local global i32 0, align 4
@ARMTIMER_CTRL_PRESCALE256 = common dso_local global i32 0, align 4
@ARMTIMER_CTRL_ENABLE = common dso_local global i32 0, align 4
@ARMTIMER_CTRL_INT_ENABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @armtimer_init() #0 {
  %1 = load i32, i32* @ARMTIMER_LOAD, align 4
  %2 = load i32, i32* @interval, align 4
  %3 = call i32 @put32(i32 %1, i32 %2)
  %4 = load i32, i32* @ARMTIMER_CTRL, align 4
  %5 = load i32, i32* @ARMTIMER_CTRL_23BIT, align 4
  %6 = load i32, i32* @ARMTIMER_CTRL_PRESCALE256, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @ARMTIMER_CTRL_ENABLE, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @ARMTIMER_CTRL_INT_ENABLE, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @put32(i32 %4, i32 %11)
  ret void
}

declare dso_local i32 @put32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
